# whisper-asr-webservice-tourchUpdate

./: Dockerfile.gpu  pyproject.toml
.github/workflows/: docker-gpu-publish.yml
