[tool.poetry]
name = "whisper-asr-webservice"
version = "1.0.1-beta"
description = "Whisper ASR Webservice is a general-purpose speech recognition webservice. "
authors = [
    "Ahmet Öner",
    "Besim Alibegovic",
]
packages = [{ include = "whisper_asr", from = "src" }]

[tool.poetry.scripts]
whisper_asr = "whisper_asr.webservice:start"


[tool.poetry.dependencies]
python = "^3.9"
unidecode = "^1.3.4"
uvicorn = { extras = ["standard"], version = "^0.18.2" }
torch = { version = "1.12.1"}
torchaudio = { version = "0.12.1"}
torchvision = { version = "0.13.1"}
whisper = {git = "https://github.com/openai/whisper.git", rev="d18e9ea5dd2ca57c697e8e55f9e654f06ede25d0"}
tqdm = "^4.64.1"
transformers = "^4.22.1"
python-multipart = "^0.0.5"
ffmpeg-python = "^0.2.0"
fastapi = "^0.85.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true
